Till code generator

--- a/QuickKart/appsettings.json
+++ b/QuickKart/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "ConnectionStrings": {
+    "QuickKartCon": "Server=.;Database=QuickKartDB;Trusted_Connection=True;"
+  },
+    "AllowedHosts": "*"
+  }
