--- a/QuickKart/QuickKart.csproj
+++ b/QuickKart/QuickKart.csproj
@@ -7,7 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Contracts" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuickKartDataAccessLayer\QuickKartDataAccessLayer.csproj" />
   </ItemGroup>
 
 </Project>
